@@ -1,2 +1,4 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^\.travis.yml$
+^\.codecov\.yml$
