@@ -1,0 +1,33 @@
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
+
+language: c
+
+sudo: required
+
+dist: trusty
+
+before_install:
+  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  # add our launchpad repo 
+  # - sudo add-apt-repository -y ppa:edd/misc
+  - ./run.sh bootstrap
+
+install:
+  # - ./run.sh install_aptget 
+
+script:
+  - ./run.sh run_tests
+
+after_failure:
+  - ./run.sh dump_logs
+
+after_success:
+  - ./run.sh coverage
+   
+notifications:
+  email:
+    on_success: change
+    on_failure: change
+
+    
+
